erDiagram
    USUARIOS {
        int id PK
        varchar email UK
        varchar password_hash
        varchar nombre
        varchar apellido
        varchar rol
        boolean activo
        int usuario_comercial_id
        timestamp fecha_creacion
        timestamp fecha_actualizacion
    }

    PERMISOS {
        int id PK
        varchar codigo UK
        varchar nombre
        text descripcion
        varchar categoria
        boolean activo
        timestamp fecha_creacion
    }

    ROLES_PERMISOS {
        varchar rol PK
        int permiso_id FK
    }

    USUARIOS_PERMISOS {
        int usuario_id FK
        int permiso_id FK
        timestamp fecha_asignacion
        int asignado_por
    }

    USUARIOS_LOCALES {
        int usuario_id FK
        int local_id
    }

    USUARIOS ||--o{ USUARIOS_PERMISOS : "permisos extra"
    USUARIOS ||--o{ USUARIOS_LOCALES : "locales asignados"
    PERMISOS ||--o{ ROLES_PERMISOS : "plantilla rol"
    PERMISOS ||--o{ USUARIOS_PERMISOS : "asignado"
